# connect4

./: .dockerignore  .env  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2fbb3c9ec667_player_move_log_added.py  51ec240ce2fd_moves_count_added_to_the_game.py  5ffdc230647d_players_name_added.py  825ad2469aa8_initail_migration.py  86acbd998028_winner_name_added.py  8be3e71e90ff_game_table.py  a25a3eae4f28_initial_migration.py  a2b8f1264d20_created_by_added.py  d501037aa5fa_nullable_true_added_to_the_game.py  e5d3ba534bde_player_move_log_step_field_added.py  ff4fb9d702aa_game_sides_type_added.py
app/: main.py
app/api/api_v1/: api.py  auth.py  game.py  test.py
app/consumers/: redis_subscriber.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  game.py  player.py  player_move_log.py
app/db/: base_class.py  session.py
app/game_simulating_with_bots/: bot_vs_bot.ipynb  human_vs_bot.ipynb
app/models/: __init__.py  game.py  player.py  player_move_log.py
app/schemas/: __init__.py  game.py  player.py  player_move_log.py  token.py
app/utils/: connection_manager.py  crud_cache.py  helpers.py  publisher.py  redis_connector.py  redis_lock.py  time_checker_job.py
