[tool.poetry]
name = "connect_4"
version = "0.1.0"
description = ""
authors = ["MaziarHeidari2003 <maziarheidari1124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.118.0,<0.119.0"
sqlalchemy = ">=2.0.43,<3.0.0"
pydantic = { version = ">=2.11.9,<3.0.0", extras = ["email"] }
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic-settings = ">=2.11.0,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.16.5,<2.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
redis = {extras = ["async"], version = "^7.0.1"}
pyjwt = ">=2.10.1,<3.0.0"
apscheduler = "^3.11.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
